--- a/web/app/themes/huskies-theme/styles/slideshow.less
+++ b/web/app/themes/huskies-theme/styles/slideshow.less
@@ -1,17 +1,7 @@
 .slideshow {
   list-style: none;
-  height: 200px;
+  height: 50vh;
   position: relative;
-
-  &:after {
-    content: '';
-    bottom: 0;
-    border-left: transparent 0 solid;
-    border-right: transparent 100vw solid;
-    border-bottom: @c-white 50px solid;
-    position: absolute;
-    left: 0;
-  }
 }
 
 .slideshow__item {
