--- a/web/app/themes/huskies-theme/styles/index.less
+++ b/web/app/themes/huskies-theme/styles/index.less
@@ -4,6 +4,11 @@
 @import "_fonts";
 @import "_typography";
 @import "_buttons";
+@import "_parallax";
+
+* {
+  box-sizing: border-box;
+}
 
 html, body, ul, h1, h2 {
   margin: 0;
