--- a/web/app/themes/huskies-theme/views/layout/header.twig
+++ b/web/app/themes/huskies-theme/views/layout/header.twig
@@ -1,8 +1,6 @@
-<nav class="header">
-  <div class="header__mobile clear">
-    <span class="icon-menu pull-left"></span>
-    <span class="icon-paw pull-right"></span>
+<nav>
+  <div class="header__mobile clear" data-anchor-target="#logo" data-300-top-top="background-color: rgba(255, 255, 255, 0);" data-150-top-top="background-color: rgba(255, 255, 255, 1);">
+    <span class="icon-menu pull-left" data-anchor-target="#logo" data-300-top-top="color: rgba(255, 255, 255, 1);" data-150-top-top="color: rgba(80, 81, 79, 1);"></span>
+    <span class="icon-paw pull-right" data-anchor-target="#logo" data-300-top-top="color: rgba(255, 255, 255, 1);" data-150-top-top="color: rgba(80, 81, 79, 1);"></span>
   </div>
 </nav>
-
-<img class="logo" src="{{ site.theme.uri }}/images/logo.svg" alt="Logo" />
