--- a/web/app/themes/huskies-theme/styles/header.less
+++ b/web/app/themes/huskies-theme/styles/header.less
@@ -13,18 +13,25 @@
   > [class^="icon-"] {
     .icon(@c-white);
     font-size: 30px;
-    line-height: 50px;
+    line-height: 60px;
     margin: 0 5px;
   }
 }
 
+.logo__wrapper {
+  height: 250px;
+}
+
 .logo {
-  position: fixed;
-  margin: 0 auto;
+  // position: relative;
+  margin: auto;
+  left: 0;
+  right: 0;
   z-index: 11;
+  top: 0;
   // width: 150px;
   display: block;
   // position: relative;
   // top: -15px;
-  left: calc(~"50% - 150px");
+  // left: calc(~"50% - 150px");
 }
