--- a/web/app/themes/huskies-theme/styles/section.less
+++ b/web/app/themes/huskies-theme/styles/section.less
@@ -1,7 +1,7 @@
 .section {
   padding: 25px;
   position: relative;
-  padding-top: 200px;
+  // padding-top: 200px;
 
   &:before {
     content: '';
