--- a/web/app/themes/huskies-theme/views/page/front.twig
+++ b/web/app/themes/huskies-theme/views/page/front.twig
@@ -6,9 +6,10 @@
 
 {% block content %}
   <section class="section">
-    {% include 'images/logo.svg' %}
+    <div class="logo__wrapper" data-anchor-target="#logo" data-70-top-top="height: 250px;" data-top-top="height: 50px;">
+      {% include 'images/logo.svg' %}
+    </div>
 
-    <!-- <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg> -->
     <h1 class="section__title">{{ __('Posts', 'huskies') }}</h1>
     {% for last_post in last_posts %}
       <article class="post_short {{ last_post.class }}" id="post-{{ last_post.ID }}">
