add main menu for mobile

--- a/web/app/themes/huskies-theme/styles/_variables.less
+++ b/web/app/themes/huskies-theme/styles/_variables.less
@@ -14,3 +14,11 @@
 @fs-l: 1.25rem;
 @fs-xl: 1.5rem;
 @fs-xxl: 2.125rem;
+
+@height-header: 50vh;
+@width-sidebar: 200px;
+
+@z-top-absolute: 1000;
+@z-top: 10;
+
+@transition-menu: left 0.5s ease;
