--- a/web/app/themes/huskies-theme/styles/section.less
+++ b/web/app/themes/huskies-theme/styles/section.less
@@ -2,10 +2,11 @@
   padding: 25px;
   position: relative;
   // padding-top: 200px;
+  background-color: @c-white;
 
   &:before {
     content: '';
-    top: -50px;
+    top: -49px;
     border-left: transparent 0 solid;
     border-right: transparent 100vw solid;
     border-bottom: @c-white 50px solid;
