--- a/web/app/themes/huskies-theme/styles/slideshow.less
+++ b/web/app/themes/huskies-theme/styles/slideshow.less
@@ -1,16 +1,20 @@
 .slideshow {
   list-style: none;
-  height: 50vh;
-  position: relative;
+  height: @height-header;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: -1;
 }
 
 .slideshow__item {
   width: 100%;
   height: 100%;
-  background-size: cover;
+  background-size: 170%;
   position: absolute;
   top: 0;
   left: 0;
-  background-position: center center;
+  background-position: center top;
   background-repeat: no-repeat;
 }
