--- a/web/app/themes/huskies-theme/views/layout/header.twig
+++ b/web/app/themes/huskies-theme/views/layout/header.twig
@@ -1,6 +1,4 @@
-<nav>
-  <div class="header__mobile clear" data-anchor-target="#logo" data-150-top-top="background-color: rgba(255, 255, 255, 0);box-shadow:0 2px 5px rgba(0,0,0,0)" data-top-top="background-color: rgba(255, 255, 255, 1);box-shadow:0 2px 5px rgba(0,0,0,0.25)">
-    <span class="icon-menu pull-left" data-anchor-target="#logo" data-150-top-top="color: rgba(255, 255, 255, 1);" data-top-top="color: rgba(80, 81, 79, 1);"></span>
-    <span class="icon-paw pull-right" data-anchor-target="#logo" data-150-top-top="color: rgba(255, 255, 255, 1);" data-top-top="color: rgba(80, 81, 79, 1);"></span>
-  </div>
+<nav class="header__mobile clear" data-anchor-target="#logo" data-150-top-top="background-color: rgba(255, 255, 255, 0);box-shadow:0 2px 5px rgba(0,0,0,0)" data-top-top="background-color: rgba(255, 255, 255, 1);box-shadow:0 2px 5px rgba(0,0,0,0.25)">
+  <span class="icon-menu pull-left main_menu__toogle" data-anchor-target="#logo" data-150-top-top="color: rgba(255, 255, 255, 1);" data-top-top="color: rgba(80, 81, 79, 1);"></span>
+  <span class="icon-paw pull-right" data-anchor-target="#logo" data-150-top-top="color: rgba(255, 255, 255, 1);" data-top-top="color: rgba(80, 81, 79, 1);"></span>
 </nav>
