cleanup markup and styles

--- a/web/app/themes/huskies-theme/styles/_variables.less
+++ b/web/app/themes/huskies-theme/styles/_variables.less
@@ -22,3 +22,9 @@
 @z-top: 10;
 
 @transition-menu: left 0.5s ease;
+
+@max-width: 960px;
+
+@phablet: ~"screen and (min-width: 480px)";
+@tablet: ~"screen and (min-width: 768px)";
+@desktop: ~"screen and (min-width: 1280px)";
