--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -7,12 +7,27 @@
   z-index: @z-top-absolute + 1;
   padding-left: 40px;
   transition: @transition-menu;
+  top: 0;
+  overflow: hidden;
+
+  @media @tablet {
+    position: absolute;
+    background-color: transparent;
+    left: 0;
+    height: auto;
+    margin-left: 5%;
+  }
+
+  @media @desktop {
+    margin-left: 10%;
+  }
 }
 
 .main_menu__overlay {
   position: fixed;
   width: calc(~"100% + 200px");
   left: -@width-sidebar;
+  top: 0;
   height: 100%;
   background-color: rgba(0,0,0,0.25);
   z-index: @z-top-absolute;
@@ -22,9 +37,7 @@
 }
 
 .main_menu--is-open {
-  overflow: hidden;
-
-  .content {
+  .container {
     left: @width-sidebar;
     overflow: hidden;
   }
@@ -41,20 +54,32 @@
   .header__mobile {
     left: @width-sidebar;
   }
-
-  .logo {
-    left: @width-sidebar;
-  }
 }
 
 .main_menu__logo {
-  width: 100%;
   position: relative;
-  left: -25px;
   display: block;
+  left: -87px;
+  width: 175%;
+  margin-top: -25px;
+  top: -25px;
 
   > svg {
     width: 100%;
+  }
+
+  @media @tablet {
+    left: -75px;
+    top: 0;
+    margin-top: 0;
+  }
+}
+
+.main_menu__logo--husky {
+  display: none;
+
+  @media @tablet {
+    display: inline-block;
   }
 }
 
@@ -83,7 +108,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    border: 3px solid @c-grey;
+    border: 3px solid @c-black;
     background-color: @c-white;
     transition: border 0.3s ease;
   }
@@ -92,10 +117,10 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 71px;
+    height: 55px;
     left: 1px;
     top: 23px;
-    background-color: @c-grey;
+    background-color: @c-black;
   }
 
   &:hover {
