--- a/web/app/themes/huskies-theme/styles/post_short.less
+++ b/web/app/themes/huskies-theme/styles/post_short.less
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  .maxwidth();
 
   &:not(:last-of-type) {
     padding-bottom: 50px;
