--- a/web/app/themes/huskies-theme/views/layout/main_menu.twig
+++ b/web/app/themes/huskies-theme/views/layout/main_menu.twig
@@ -1,7 +1,11 @@
 <div class="main_menu__overlay"></div>
 <div class="main_menu">
   <a href="{{ site.url }}" class="main_menu__logo">
-    <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg>
+    <svg>
+      <use xlink:href="#logo-font" width="60%" height="60%" x="21.5%" y="41.5%"></use>
+      <use class="main_menu__logo--husky" xlink:href="#logo-husky" width="90%" height="90%" x="-14%" y="0%"></use>
+    </svg>
+    <!-- <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg> -->
   </a>
   <ul class="main_menu__items">
     {% for item in menu.get_items %}
