--- a/web/app/themes/huskies-theme/views/page/front.twig
+++ b/web/app/themes/huskies-theme/views/page/front.twig
@@ -7,6 +7,7 @@
 
 {% block content %}
   <section class="section">
+    <!-- <hr class="section__triangle" /> -->
     <div class="logo__wrapper">
       <svg>
         <use xlink:href="#logo-font" width="60%" height="60%" x="21.5%" y="41.5%"></use>
@@ -20,6 +21,7 @@
     {% endfor %}
   </section>
   <section class="section section--inverse">
+    <!-- <hr class="section__triangle" /> -->
     <h1 class="section__title">{{ __('Appointments', 'huskies') }}</h1>
     {% for appointment in appointments %}
       {{ appointment.get_event_markup('list', 1, 1) }}
