cleanup js and used libraries

--- a/web/app/themes/huskies-theme/styles/_buttons.less
+++ b/web/app/themes/huskies-theme/styles/_buttons.less
@@ -6,6 +6,7 @@
   font-size: @fs-l;
   cursor: pointer;
   text-decoration: none;
+  transition: background-color .3s ease;
 
   &:hover {
     background-color: lighten(@c-black, 10%);
