--- a/web/app/themes/huskies-theme/styles/_mixins.less
+++ b/web/app/themes/huskies-theme/styles/_mixins.less
@@ -7,6 +7,8 @@
 .icon(@color: @c-white) {
   cursor: pointer;
   color: @color;
+  transition: color .3s ease;
+
   &:hover {
     color: darken(@color, 10%);
   }
