--- a/web/app/themes/huskies-theme/styles/slideshow.less
+++ b/web/app/themes/huskies-theme/styles/slideshow.less
@@ -2,7 +2,6 @@
   list-style: none;
   height: @height-header;
   position: fixed;
-  // position: relative;
   left: 0;
   top: 0;
   width: 100%;
@@ -30,12 +29,12 @@
 
 .slideshow--no-images {
   background-color: @c-blue;
-  height: @height-header / 2;
+  height: @height-header / 2.5;
 }
 
 .slideshow__title {
   position: absolute;
-  font-size: @fs-xxl;
+  font-size: @fs-xxxl;
   bottom: 50px;
   left: 0;
   right: 0;
