--- a/web/app/themes/huskies-theme/views/layout/header.twig
+++ b/web/app/themes/huskies-theme/views/layout/header.twig
@@ -1,7 +1,7 @@
-<nav class="header__mobile clear" data-anchor-target=".slideshow" data-100-top-bottom="background-color: rgba(255, 255, 255, 0);box-shadow:0 2px 5px rgba(0,0,0,0)" data-top-bottom="background-color: rgba(255, 255, 255, 1);box-shadow:0 2px 5px rgba(0,0,0,0.25)">
-  <span class="icon-menu pull-left main_menu__toogle" data-anchor-target=".slideshow" data-100-top-bottom="color: rgba(255, 255, 255, 1);" data-top-bottom="color: rgba(80, 81, 79, 1);"></span>
-  <a href="{{ site.url }}" class="header__mobile-logo" data-anchor-target=".slideshow" data-100-top-bottom="opacity:0;" data-top-bottom="opacity:1;">
+<nav class="header__mobile clear">
+  <span class="icon-menu pull-left main_menu__toggle"></span>
+  <a href="{{ site.url }}" class="header__mobile-logo">
     <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg>
   </a>
-  <span class="icon-paw pull-right" data-anchor-target=".slideshow" data-100-top-bottom="color: rgba(255, 255, 255, 1);" data-top-bottom="color: rgba(80, 81, 79, 1);"></span>
+  <span class="icon-paw pull-right"></span>
 </nav>
