add user to sidebar

--- a/web/app/themes/huskies-theme/styles/_typography.less
+++ b/web/app/themes/huskies-theme/styles/_typography.less
@@ -14,13 +14,14 @@ h2 {
 
   strong, small {
     font-size: @fs-l;
+    font-weight: @fw-normal;
   }
 
   strong {
-    font-weight: @fw-bold;
+    color: @c-blue;
   }
 
   small {
-    font-weight: @fw-light;
+    color: @c-black;
   }
 }
