--- a/web/app/themes/huskies-theme/views/layout/footer.twig
+++ b/web/app/themes/huskies-theme/views/layout/footer.twig
@@ -1,7 +1,4 @@
-<!-- <img class="footer__img" src="{{ site.theme.link }}/images/berlin.svg" alt="berlin skyline" /> -->
-<div class="footer__img" style="background-image: url('{{ site.theme.link }}/images/berlin.svg');">
-
-</div>
+<div class="footer__img" style="background-image: url('{{ site.theme.link }}/images/berlin.svg');"></div>
 
 <h1 class="footer__headline">{{ __('Visit us in web', 'huskies') }}</h1>
 <ul class="footer-menu">
