--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -5,11 +5,12 @@
   height: 100%;
   width: @width-sidebar;
   z-index: @z-top-absolute + 1;
-  padding-left: 40px;
+  padding-left: 60px;
   transition: @transition-menu;
   top: 0;
   overflow-x: hidden;
   overflow-y: auto;
+  padding-top: 30px;
 
   @media @tablet {
     position: absolute;
@@ -17,6 +18,7 @@
     left: 0;
     height: auto;
     margin-left: 5%;
+    padding-top: 0;
   }
 
   @media @desktop {
@@ -44,7 +46,7 @@
 
 .main_menu--is-open {
   overflow: hidden;
-  
+
   .container {
     left: @width-sidebar;
     overflow: hidden;
@@ -65,29 +67,23 @@
 }
 
 .main_menu__logo {
-  position: relative;
+  position: absolute;
   display: block;
-  left: -87px;
-  width: 175%;
-  margin-top: -25px;
-  top: -25px;
+  left: 30px;
+  width: 70%;
+  bottom: -20px;
 
   > svg {
     width: 100%;
   }
 
   @media @tablet {
-    left: -75px;
-    top: 0;
-    margin-top: 0;
-  }
-}
-
-.main_menu__logo--husky {
-  display: none;
-
-  @media @tablet {
-    display: inline-block;
+    position: relative;
+    left: -25px;
+    width: 100%;
+    bottom: 10px;
+    top: -50px;
+    bottom: 0;
   }
 }
 
@@ -96,12 +92,16 @@
 }
 
 .main_menu__link {
-  font-size: @fs-xxl;
+  font-size: @fs-xl;
   font-family: @f-highlight;
   color: @c-blue;
   text-decoration: none;
   transition: color 0.3s ease;
   display: block;
+
+  &:hover {
+    color: darken(@c-blue, 10);
+  }
 }
 
 .main_menu__item {
@@ -112,13 +112,13 @@
   &:before {
     content: '';
     position: absolute;
-    top: 7px;
-    left: -5px;
+    top: 5px;
+    left: -9px;
     width: 10px;
     height: 10px;
     border-radius: 50%;
     border: 3px solid @c-black;
-    background-color: @c-white;
+    background-color: transparent;
     transition: border 0.3s ease;
   }
 
@@ -126,28 +126,54 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 55px;
-    left: 1px;
-    top: 23px;
+    height: 44px;
+    left: -3px;
+    top: 21px;
     background-color: @c-black;
   }
 
   &:hover {
-    .main_menu__link{
-      color: darken(@c-blue, 10);
-    }
-
     &:before {
       border-color: @c-blue;
     }
   }
 
   &.main_menu__item--seperate {
-    // margin-bottom: 25px;
-    // padding-bottom: 25px;
-    //
-    // &:not(:last-child):after {
-    //   height: 80px;
-    // }
+    margin-bottom: 55px;
+    padding-top: 10px;
+    padding-left: 40px;
+
+    &:before {
+      display: none;
+    }
+
+    &:not(:last-child):after {
+      height: 55px;
+      top: 70px;
+    }
+
+   .main_menu__link:first-of-type {
+     margin-bottom: 5px;
+   }
+  }
+}
+
+.main_menu__user {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: @c-white;
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  top: 0px;
+  left: -35px;
+  border-radius: 50%;
+  border: 3px solid @c-black;
+  transition: border 0.3s ease;
+  overflow: hidden;
+
+  > img {
+    width: 100%;
+    height: 100%;
   }
 }
