add basic styling for gallery single post

--- a/web/app/themes/huskies-theme/styles/index.less
+++ b/web/app/themes/huskies-theme/styles/index.less
@@ -64,8 +64,10 @@ main {
 }
 
 @import "main_menu";
+@import "gallery";
 @import "section";
 @import "header";
 @import "slideshow";
 @import "post_short";
+@import "post_full";
 @import "footer";
