--- a/web/app/themes/huskies-theme/views/page/blog.twig
+++ b/web/app/themes/huskies-theme/views/page/blog.twig
@@ -3,7 +3,7 @@
 
 {% block header %}
   <div class="slideshow slideshow--no-images">
-    <h1 class="slideshow__title">{{ __('Galleries', 'huskies') }}</h1>
+    <h1 class="slideshow__title">{{ __(headline, 'huskies') }}</h1>
   </div>
 {% endblock %}
 
