--- a/web/app/themes/huskies-theme/styles/header.less
+++ b/web/app/themes/huskies-theme/styles/header.less
@@ -22,6 +22,21 @@ header {
     font-size: 30px;
     line-height: 60px;
     margin: 0 5px;
+    text-decoration: none;
+  }
+
+  .icon-custom-user {
+    width: 30px;
+    height: 30px;
+    filter: grayscale(100%);
+    margin-top: 12px;
+
+    > img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: 50%;
+    }
   }
 
   @media @tablet {
