simplified sidebar/main_menu and switch to post categories

--- a/web/app/themes/huskies-theme/styles/header.less
+++ b/web/app/themes/huskies-theme/styles/header.less
@@ -38,10 +38,6 @@ header {
       border-radius: 50%;
     }
   }
-
-  @media @tablet {
-    display: none;
-  }
 }
 
 .header__mobile-logo {
@@ -56,6 +52,7 @@ header {
   opacity: 0;
   visibility: hidden;
   transition: visibility .3s ease, opacity .3s ease;
+  color: @c-black;
 
   > svg {
     height: 100%;
