--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -1,34 +1,17 @@
 .main_menu {
   position: fixed;
   left: -@width-sidebar;
-  background-color: @c-white;
+  background-color: @c-black;
+  color: @c-white;
   height: 100%;
   width: @width-sidebar;
   z-index: @z-top-absolute + 1;
-  padding-left: 60px;
+  padding: 30px 0 100px;
   transition: @transition-menu;
   top: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  padding-top: 30px;
-
-  @media @tablet {
-    position: absolute;
-    background-color: transparent;
-    left: 0;
-    height: auto;
-    margin-left: 5%;
-    padding-top: 0;
-  }
-
-  @media @desktop {
-    margin-left: 10%;
-  }
-}
-
-.main_menu--sticky {
-  position: fixed;
-  top: 50px;
+  box-shadow: 0 0px 10px 1px fade(@c-black, 50%);
 }
 
 .main_menu__overlay {
@@ -47,11 +30,6 @@
 .main_menu--is-open {
   overflow: hidden;
 
-  .container {
-    left: @width-sidebar;
-    overflow: hidden;
-  }
-
   .main_menu__overlay {
     opacity: 1;
     visibility: visible;
@@ -60,10 +38,6 @@
   .main_menu {
     left: 0;
   }
-
-  .header__mobile {
-    left: @width-sidebar;
-  }
 }
 
 .main_menu__logo {
@@ -71,20 +45,13 @@
   display: block;
   left: 30px;
   width: 70%;
-  bottom: -20px;
-  pointer-events: none;
+  bottom: 20px;
+  color: @c-white;
+  height: 80px;
 
   > svg {
     width: 100%;
-  }
-
-  @media @tablet {
-    position: relative;
-    left: -25px;
-    width: 100%;
-    bottom: 10px;
-    top: -50px;
-    bottom: 0;
+    height: 100%;
   }
 }
 
@@ -92,123 +59,63 @@
   list-style: none;
 }
 
-.main_menu__link {
-  font-size: @fs-xl;
-  font-family: @f-highlight;
-  color: @c-blue;
-  text-decoration: none;
-  transition: color 0.3s ease;
-  display: inline-block;
+.main_menu__item {
+  margin-bottom: 15px;
   position: relative;
+}
 
-  &:before {
-    content: "";
-    position: absolute;
-    transition: left .3s ease, right .3s ease;
-    left: 50%;
-    right: 50%;
-    height: 1px;
-    bottom: 0;
-    background-color: @c-blue;
+.main_menu__item--seperate {
+  margin-bottom: 35px;
+  text-align: center;
+
+  .main_menu__link {
+    display: inline-block;
+
+    &:hover {
+      color: @c-blue;
+      background-color: transparent;
+    }
   }
 
-  &:after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 1px;
-    left: -15px;
-    top: 20px;
-    background-color: #209ADC;
-    transform: rotate(25deg);
-    transition: width .3s ease;
+  .main_menu__link:first-of-type {
+    margin-right: 15px;
+    position: relative;
+
+    &:after {
+     content: '|';
+     font-size: @fs-xxxl;
+     position: absolute;
+     top: -20px;
+     right: -10px;
+     color: @c-white;
+    }
   }
 }
 
-.main_menu__item {
-  margin-bottom: 35px;
+.main_menu__link {
+  font-size: @fs-xl;
+  font-family: @f-highlight;
+  color: @c-white;
+  text-decoration: none;
+  transition: color .3s ease, border .3s ease, background-color .3s ease;
+  display: block;
   position: relative;
-  padding-left: 20px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    top: 5px;
-    left: -9px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    border: 3px solid @c-black;
-    background-color: transparent;
-    transition: border 0.3s ease;
-  }
-
-  &:not(:last-child):after {
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 44px;
-    left: -3px;
-    top: 21px;
-    background-color: @c-black;
-  }
-
-  &:hover,
-  &.current-menu-item {
-    &:before {
-      border-color: @c-blue
-    }
-  }
-
-  &.main_menu__item--seperate {
-    margin-bottom: 55px;
-    padding-top: 10px;
-    padding-left: 40px;
-
-    &:before {
-      display: none;
-    }
-
-    &:not(:last-child):after {
-      height: 55px;
-      top: 70px;
-    }
-
-   .main_menu__link:first-of-type {
-     margin-bottom: 5px;
-   }
-
-   .main_menu__link:after {
-     display: none;
-   }
-  }
+  text-align: center;
+  line-height: 2.5;
 }
 
 .current-menu-item > .main_menu__link,
 .main_menu__link:hover {
-  &:before {
-    left: 0;
-    right: 0;
-  }
-
-  &:after {
-    width: 16px;
-  }
+  background-color: @c-blue;
 }
 
 .main_menu__user {
-  background-repeat: no-repeat;
-  background-size: cover;
   background-color: @c-white;
   width: 70px;
   height: 70px;
-  position: absolute;
-  top: 0px;
-  left: -35px;
   border-radius: 50%;
-  border: 3px solid @c-black;
-  transition: border 0.3s ease;
   overflow: hidden;
+  margin: 0 auto;
 
   > img {
     width: 100%;
