--- a/web/app/themes/huskies-theme/views/index.twig
+++ b/web/app/themes/huskies-theme/views/index.twig
@@ -1,8 +1,16 @@
 {% extends "layout/base.twig" %}
+{% from 'macro.twig' import post_short %}
+
+{% block header %}
+  <div class="slideshow slideshow--no-images">
+    <h1 class="slideshow__title">{{ __(headline, 'huskies') }}</h1>
+  </div>
+{% endblock %}
 
 {% block content %}
-  {% for post in posts %}
-    <h1>{{ post.title }}</h1>
-    {{ post.content }}
-  {% endfor %}
+  <section class="section">
+    {% for post in posts %}
+      {{ post_short(post) }}
+    {% endfor %}
+  </section>
 {% endblock %}
