--- a/web/app/themes/huskies-theme/styles/_buttons.less
+++ b/web/app/themes/huskies-theme/styles/_buttons.less
@@ -6,17 +6,22 @@
   font-size: @fs-l;
   cursor: pointer;
   text-decoration: none;
-  transition: background-color .3s ease;
+  transition: background-color .3s ease, border .3s ease, color .3s ease;
+  border: 1px solid transparent;
 
   &:hover {
-    background-color: lighten(@c-black, 10%);
+    background-color: transparent;
+    color: @c-black;
+    border-color: @c-black;
   }
 
   &.button--primary {
     background-color: @c-blue;
 
     &:hover {
-      background-color: darken(@c-blue, 10%);
+      background-color: transparent;
+      color: @c-blue;
+      border-color: @c-blue;
     }
   }
 }
