--- a/web/app/themes/huskies-theme/views/page/front.twig
+++ b/web/app/themes/huskies-theme/views/page/front.twig
@@ -2,7 +2,7 @@
 {% from 'macro.twig' import post_short %}
 
 {% block header %}
-  {{ post.content }}
+  {{ page.content }}
 {% endblock %}
 
 {% block content %}
