--- a/web/app/themes/huskies-theme/views/page/single.twig
+++ b/web/app/themes/huskies-theme/views/page/single.twig
@@ -2,19 +2,14 @@
 
 {% block header %}
   <div class="slideshow slideshow--no-images">
-    <h1 class="slideshow__title">{{ post.title }}</h1>
-    <div class="slideshow__desc">
-      <time>{{ post.display_date }}</time>
-      {{ __('by', 'huskies') }}
-      {{ post.author }}
-    </div>
+    <h1 class="slideshow__title">{{ page.title }}</h1>
   </div>
 {% endblock %}
 
 {% block content %}
 <section class="section">
-  <article class="post-full {{ post.class }}">
-    {{ post.content }}
+  <article class="post-full {{ page.class }}">
+    {{ page.content }}
   </article>
 </section>
 {% endblock %}
