add new major version from calendar plugin

--- a/web/app/themes/huskies-theme/styles/_buttons.less
+++ b/web/app/themes/huskies-theme/styles/_buttons.less
@@ -8,6 +8,7 @@
   text-decoration: none;
   transition: background-color .3s ease, border .3s ease, color .3s ease;
   border: 1px solid transparent;
+  display: inline-block;
 
   &:hover {
     background-color: transparent;
