--- a/web/app/themes/huskies-theme/views/page/single.twig
+++ b/web/app/themes/huskies-theme/views/page/single.twig
@@ -2,14 +2,14 @@
 
 {% block header %}
   <div class="slideshow slideshow--no-images">
-    <h1 class="slideshow__title">{{ page.title }}</h1>
+    <h1 class="slideshow__title">{{ post.title }}</h1>
   </div>
 {% endblock %}
 
 {% block content %}
 <section class="section">
-  <article class="post-full {{ page.class }}">
-    {{ page.content }}
+  <article class="post-full {{ post.class }}">
+    {{ post.content }}
   </article>
 </section>
 {% endblock %}
