some first calendar adjustments

--- a/web/app/themes/huskies-theme/styles/_variables.less
+++ b/web/app/themes/huskies-theme/styles/_variables.less
@@ -24,6 +24,7 @@
 
 @max-width: 960px;
 
-@phablet: ~"screen and (min-width: 480px)";
-@tablet: ~"screen and (min-width: 768px)";
-@desktop: ~"screen and (min-width: 1280px)";
+@mobile: ~"screen and (max-width: 767px)";
+@from-phablet: ~"screen and (min-width: 480px)";
+@from-tablet: ~"screen and (min-width: 768px)";
+@from-desktop: ~"screen and (min-width: 1280px)";
