--- a/web/app/themes/huskies-theme/styles/gallery.less
+++ b/web/app/themes/huskies-theme/styles/gallery.less
@@ -10,15 +10,15 @@
   transition: filter .5s ease;
   filter: grayscale(100%);
 
-  @media @phablet {
+  @media @from-phablet {
     flex-basis: 25%;
   }
 
-  @media @tablet {
+  @media @from-tablet {
     flex-basis: 20%;
   }
 
-  @media @desktop {
+  @media @from-desktop {
     flex-basis: 12.5%;
   }
 
