--- a/web/app/themes/huskies-theme/styles/section.less
+++ b/web/app/themes/huskies-theme/styles/section.less
@@ -12,12 +12,12 @@
     position: absolute;
     left: 0;
 
-    @media @tablet {
+    @media @from-tablet {
       top: -59px;
       border-bottom-width: 60px;
     }
 
-    @media @desktop {
+    @media @from-desktop {
       top: -69px;
       border-bottom-width: 70px;
     }
@@ -30,14 +30,6 @@
   &:last-of-type {
     padding-bottom: 25vh;
   }
-
-  // @media @tablet {
-  //   padding-left: calc(~"5% + @{width-sidebar} + 50px");
-  // }
-  //
-  // @media @desktop {
-  //   padding-left: calc(~"10% + @{width-sidebar} + 50px");
-  // }
 }
 
 .section__title {
