--- a/web/app/themes/huskies-theme/views/layout/footer.twig
+++ b/web/app/themes/huskies-theme/views/layout/footer.twig
@@ -21,10 +21,10 @@
 
 <ul class="footer-submenu">
   <li class="footer-submenu__item">
-    <a href="{{ site.theme.link }}/impressum">{{ __('Imprint', 'huskies') }}</a>
+    <a href="{{ site.url }}/impressum">{{ __('Imprint', 'huskies') }}</a>
   </li>
   <li class="footer-submenu__item">
-    <a href="{{ site.theme.link }}/kontakt">{{ __('Contact', 'huskies') }}</a>
+    <a href="{{ site.url }}/kontakt">{{ __('Contact', 'huskies') }}</a>
   </li>
 </ul>
 
