--- a/web/app/themes/huskies-theme/styles/_buttons.less
+++ b/web/app/themes/huskies-theme/styles/_buttons.less
@@ -9,6 +9,7 @@
   transition: background-color .3s ease, border .3s ease, color .3s ease;
   border: 1px solid transparent;
   display: inline-block;
+  outline: none;
 
   &:hover {
     background-color: transparent;
