--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -3,15 +3,18 @@
   left: -@width-sidebar;
   background-color: @c-black;
   color: @c-white;
+  min-height: 100vh;
   height: 100%;
   width: @width-sidebar;
   z-index: @z-top-absolute + 1;
-  padding: 30px 0 100px;
+  padding: 30px 0;
   transition: @transition-menu;
   top: 0;
   overflow-x: hidden;
   overflow-y: auto;
   box-shadow: 0 0px 10px 1px fade(@c-black, 50%);
+  display: flex;
+  flex-direction: column;
 }
 
 .main_menu__overlay {
@@ -41,11 +44,11 @@
 }
 
 .main_menu__logo {
-  position: absolute;
+  position: relative;
   display: block;
-  left: 30px;
+  margin-left: 30px;
   width: 70%;
-  bottom: 20px;
+  bottom: -20%;
   color: @c-white;
   height: 80px;
 
