--- a/web/app/themes/huskies-theme/views/macro.twig
+++ b/web/app/themes/huskies-theme/views/macro.twig
@@ -10,3 +10,15 @@
     <a class="post_short__button button button--primary" href="{{ post.permalink }}">{{ __('More', 'huskies') }}</a>
   </article>
 {% endmacro %}
+
+{% macro pagination(pages) %}
+  <nav class="pagination">
+    {% for page in pages %}
+      {% if page.link is defined %}
+        <a class="pagination__link" href="{{ page.link }}">{{ page.title }}</a>
+      {% else %}
+        <span class="pagination__link pagination--placeholder">{{ page.title }}</span>
+      {% endif %}
+    {% endfor %}
+  </nav>
+{% endmacro %}
