--- a/web/app/themes/huskies-theme/views/layout/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/base.twig
@@ -24,7 +24,7 @@
 
     {{ function('wp_head') }}
   </head>
-  <body class="{{ body_class }}" id="skrollr-body">
+  <body class="{{ body_class }}">
     <div class="container">
       <header>
         {% include 'layout/header.twig' %}
