--- a/web/app/themes/huskies-theme/views/forum/forms/upload.twig
+++ b/web/app/themes/huskies-theme/views/forum/forms/upload.twig
@@ -9,7 +9,7 @@
   </div>
 </div>
 <a class="d4p-attachment-addfile" href="#">{{ __("Add another file", "huskies") }}</a>
-<div class="file-template">
+<div class="file-template" style="display: none;">
   <div class="file-wrapper">
     <input type="file" name="d4p_attachment[]" />
     <span class="btn">{{ __('Choose', 'huskies') }}</span>
