--- a/web/app/themes/huskies-theme/views/forum/topics.twig
+++ b/web/app/themes/huskies-theme/views/forum/topics.twig
@@ -1,12 +1,35 @@
 {% extends "layout/forum.twig" %}
 {% from 'macro.twig' import pagination %}
 
+{% macro topic(topic) %}
+  <pre>{{ dump(topic.is_sticky) }}</pre>
+  <pre>{{ dump(topic.is_super_sticky) }}</pre>
+  <pre>{{ dump(topic.post_status) }}</pre>
+  <article class="post-short {{ topic.status }} {{ topic.class }}">
+    <h2><a href="{{ topic.link }}">{{ topic.title }}</a></h2>
+    <p>{{ __('started by', 'huskies') }} {{ topic.author }}</p>
+    {{ pagination(topic.pagination) }}
+    <p>
+      <span>{{ topic.voice_count }}</span>|
+      <span>{{ topic.reply_count }}</span>|
+      <a href="{{ topic.freshness_link }}">
+        {{ __('last update', 'huskies') }}
+        <span>{{ topic.freshness_time }}</span>
+        {{ __('from', 'huskies') }}
+        <span>{{ topic.freshness_author }}</span>
+      </a>
+    </p>
+    <p>
+      {{ topic.admin_links }}
+    </p>
+  </article>
+{% endmacro %}
+
 {% block forum_headline %}
   {{ __('Topics', 'huskies') }}
 {% endblock %}
 
 {% block forum_content %}
-<section class="section">
   {{ pagination(pagination.pages) }}
   <p>
     {{ __('total topics', 'huskies') }}
@@ -17,56 +40,16 @@
   </p>
   {% do action('bbp_template_before_topics_loop') %}
   {% for index, topic in sticky_topics %}
-    <pre>{{ dump(topic.is_sticky) }}</pre>
-    <pre>{{ dump(topic.post_status) }}</pre>
-    <article class="post-short {{ topic.status }} {{ topic.class }}">
-      <h2><a href="{{ topic.link }}">{{ topic.title }}</a></h2>
-      <p>{{ __('started by', 'huskies') }} {{ topic.author }}</p>
-      {{ pagination(topic.pagination) }}
-      <p>
-        <span>{{ topic.voice_count }}</span>|
-        <span>{{ topic.reply_count }}</span>|
-        <a href="{{ topic.freshness_link }}">
-          {{ __('last update', 'huskies') }}
-          <span>{{ topic.freshness_time }}</span>
-          {{ __('from', 'huskies') }}
-          <span>{{ topic.freshness_author }}</span>
-        </a>
-      </p>
-      <p>
-        {{ topic.admin_links }}
-      </p>
-    </article>
+    topic(topic)
   {% endfor %}
 
   {% for index, topic in topics %}
-    <pre>{{ dump(topic.is_sticky) }}</pre>
-    <pre>{{ dump(topic.post_status) }}</pre>
-    <article class="post-short {{ topic.status }} {{ topic.class }}">
-      <h2><a href="{{ topic.link }}">{{ topic.title }}</a></h2>
-      <p>{{ __('started by', 'huskies') }} {{ topic.author }}</p>
-      {{ pagination(topic.pagination) }}
-      <p>
-        <span>{{ topic.voice_count }}</span>|
-        <span>{{ topic.reply_count }}</span>|
-        <a href="{{ topic.freshness_link }}">
-          {{ __('last update', 'huskies') }}
-          <span>{{ topic.freshness_time }}</span>
-          {{ __('from', 'huskies') }}
-          <span>{{ topic.freshness_author }}</span>
-        </a>
-      </p>
-      <p>
-        {{ topic.admin_links }}
-      </p>
-    </article>
+    topic(topic)
   {% endfor %}
-  {% do action('bbp_template_after_topics_loop') %}
 
-  {% if page.bbpress.current_user.can.access_topic_form %}
+  {% if page.user.can.access_topic_form %}
     {% include 'forum/forms/topic.twig' %}
   {% else %}
-    {{ __('The forum "%s" is closed to new topics and replies', 'huskies')|format(page.bbpress.forum_title) }}
+    {{ __('The forum "%s" is closed to new topics and replies', 'huskies')|format(forum.title) }}
   {% endif %}
-</section>
 {% endblock %}
