--- a/web/app/themes/huskies-theme/views/layout/header.twig
+++ b/web/app/themes/huskies-theme/views/layout/header.twig
@@ -4,7 +4,7 @@
     <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg>
   </a>
   {% if page.user.logged_in %}
-    <a class="icon-custom-user pull-right" href="{{ page.user.profile_url }}">{{ page.user.profile_image_url }}</a>
+    <a class="icon-custom-user pull-right" href="{{ page.user.profile.url }}">{{ page.user.profile.image }}</a>
   {% else %}
     <a class="icon-paw pull-right" href="{{ page.login_url }}"></a>
   {% endif %}
